--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         run: docker build -t niri-build .
 
       - name: Build niri
-        run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace niri-build cargo deb
+        run: docker run --rm -v ${{ github.workspace }}:/workspace/niri -w /workspace niri-build cargo deb
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
