--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-container:
+  build-niri:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
