Cache from ghcr

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,8 @@
 {
-    "build": { "dockerfile": "./Dockerfile" },
+    "build": { 
+        "dockerfile": "./Dockerfile",
+        "cacheFrom": "ghcr.io/michaelmnemonic/niri-devcontainer"
+    },
 
     "customizations": {
         "vscode": {
