--- a/.github/workflows/prebuild-devcontainer.yml
+++ b/.github/workflows/prebuild-devcontainer.yml
@@ -5,6 +5,8 @@ on:
     push:
         branches:
             - main
+        paths:
+            - '.devcontainer/**'
 
 jobs:
     build-devcontainer:
