--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,10 @@ on:
 
 jobs:
     build-niri:
-        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                host: [ubuntu-24.04, ubuntu-24.04-arm]
+        runs-on: ${{ matrix.host }}
         steps:
             - uses: actions/checkout@v6
               with:
