--- a/.github/workflows/prebuild-devcontainer.yml
+++ b/.github/workflows/prebuild-devcontainer.yml
@@ -7,6 +7,7 @@ on:
             - main
         paths:
             - '.devcontainer/**'
+            - '.github/workflows/prebuild-devcontainer.yml'
 
 jobs:
     build-devcontainer:
